# Insights_Aegra

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  aegra.json  docker-compose.yml  pyproject.toml
docs/: overview.md  (+3 more)
eerly_studio/: README.md  alembic_app.ini  pyproject.toml
eerly_studio/alembic/: env.py
eerly_studio/alembic/versions/: c28c834dee85_initial_migration.py  f5547ff39514_.py
eerly_studio/alembic_app/: env.py
eerly_studio/docs/: CHANGELOG.md  alembic_guide.md  architecture.md  ci_cd_integration.md  development_guide.md  state_refactoring_changelog.md
eerly_studio/scripts/: export_graph.py  quick_chunk_test.py
eerly_studio/src/eerly_studio/: main.py  my_auth.py
eerly_studio/src/eerly_studio/api/: auth.py
eerly_studio/src/eerly_studio/core/: config.py  database.py  logging.py  migrations.py  orm.py
eerly_studio/src/eerly_studio/insights/: graph.py  pyproject.toml  runner.py
eerly_studio/src/eerly_studio/insights/agents/: artifact_reuse.py  data_engineer_node.py  data_scientist_node.py  orchestrator_node.py  state.py  synthesizer_node.py
eerly_studio/src/eerly_studio/insights/cognitive_map_cache/: business_knowledge.pkl  meta.json  table_06f90c21100e6280.pkl  table_0accb0a9a57c073d.pkl  table_0dc607f025b830b1.pkl  table_0ecdf87aee84bb7c.pkl  table_0eed4944fc0dc68f.pkl  table_100a39dbab8911ee.pkl  table_10ec880dad6c3ae6.pkl  table_126c60043a4e6d9f.pkl  table_1670210f5c73fa31.pkl  table_1b14d2a682fee889.pkl  table_1e246c766de0c6ef.pkl  table_21cb3efbaa04157f.pkl  table_22768d093319f1d2.pkl  table_26e4d20622670369.pkl  table_295ce77a2bc7cdfe.pkl  table_2a8da0184b697a70.pkl  table_33c9f9c64fcb4781.pkl  table_385e1f182c93a979.pkl  table_3be3a0febba56e50.pkl  table_3c3b772a6125acc1.pkl  table_42e68a955ea20d24.pkl  table_482445ce157a0d80.pkl  table_4b87fd9160abd5b8.pkl  (+46 more)
eerly_studio/src/eerly_studio/services/: auth.py
(+92 files in other folders)
